objects/Account_Team__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Team</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Owner</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Construction Lead</fullName>
                </value>
                <value>
                    <fullName>Contracts Team</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Development Lead</fullName>
                </value>
                <value>
                    <fullName>Engineering - Civil</fullName>
                </value>
                <value>
                    <fullName>Engineering - Electrical</fullName>
                </value>
                <value>
                    <fullName>Engineering - Mechanical</fullName>
                </value>
                <value>
                    <fullName>Engineering - SCADA</fullName>
                </value>
                <value>
                    <fullName>Engineering - Structural</fullName>
                </value>
                <value>
                    <fullName>Engineering - Survey</fullName>
                </value>
                <value>
                    <fullName>Estimator</fullName>
                </value>
                <value>
                    <fullName>Executive Champion</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HSQE</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Operation Maintenance</fullName>
                </value>
                <value>
                    <fullName>Opportunity Owner</fullName>
                </value>
                <value>
                    <fullName>Permitting - Property Manager</fullName>
                </value>
                <value>
                    <fullName>PM - Construction</fullName>
                </value>
                <value>
                    <fullName>PM - Development</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Proposal Manager</fullName>
                </value>
                <value>
                    <fullName>Technical Team</fullName>
                </value>
                <value>
                    <fullName>Transmission Team</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Account_Team</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Account Team Member</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Account Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>